# bern-build

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: build.yml
src/: build.rs  dockerfile.rs  main.rs  template.rs
tests/: main.rs
tests/data/: basic.j2  basic.toml  build_arg.j2  build_arg.toml  current_target.j2  docker_arg.j2  docker_arg.toml  multi_target.j2  multi_target.toml  output2.j2  output2.toml
tests/data/template-target/: current_target.toml  current_target_2.j2  current_target_2.toml  heredoc.j2  heredoc.toml  multiline.j2  multiline.toml  prev_target.j2  prev_target.toml
tests/data/version/: high-fail.j2  high-fail.toml  maximum.j2  maximum.toml  minimum.j2  minimum.toml
