[package]
name = "bern-build"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bern"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive", "env"] }
fastrand = "2.3.0"
itertools = "0.14.0"
minijinja = { version = "2.11.0", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml_ng = "0.10.0"
tempfile = "3.20.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.3"
rstest = "0.25.0"
walkdir = "2.5.0"
