[package]
name = "bern-build"
version = "0.2.0-dev"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/rschoon/bern-build"
description = "Templating for docker as a build tool"
keywords = ["cli", "docker"]
categories = ["command-line-utilities"]

[[bin]]
name = "bern"
path = "src/main.rs"

[package.metadata.release]
pre-release-commit-message = "Release {{crate_name}} version {{version}}"
tag-message = "Release {{crate_name}} version {{version}}"
pre-release-replacements = [
    {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"},
]

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive", "env", "cargo"] }
fastrand = "2.3.0"
glob = "0.3.2"
itertools = "0.14.0"
minijinja = { version = "2.11.0", features = ["json", "loader"] }
serde = { version = "1.0.219", features = ["derive"] }
shlex = "1.3.0"
tar = "0.4.44"
tempfile = "3.20.0"
walkdir = "2.5.0"
which = "8.0.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.3"
rstest = "0.25.0"
toml = "0.9.2"


